--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -15,6 +15,6 @@
     <ion-label position="floating">Contraseña</ion-label>
     <ion-input type="password" [(ngModel)]="modeloContrasena"></ion-input>
   </ion-item>
-  <ion-button (click)="validar()" class="ion-margin-top" expand="block">Ingresar</ion-button>
+  <ion-button routerLink="/geolocalizacion" (click)="validar()" class="ion-margin-top" expand="block">Ingresar</ion-button>
 
 </ion-content>
