--- a/src/app/geolocalizacion/geolocalizacion.page.scss
+++ b/src/app/geolocalizacion/geolocalizacion.page.scss
@@ -4,3 +4,15 @@ ion-content {
 ion-button{
     --background: black;
 }
+ion-content {
+    #map {
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      transition: opacity 150ms ease-in;
+      display: block;
+      &.show-map{
+        opacity: 1;
+  }
+}    
+}
